Mon Jul 23 10:59:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/searchconnection.py: Add special
	  value of -1 for checkatleast parameter, to check all matches, and
	  document it (and the general reason for setting the checkatleast
	  parameter when using get_top_tags()).

Mon Jul 23 10:40:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/: Add missing synonym stuff.

Tue Jul 17 13:42:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/fieldactions.py,
	  secore/searchconnection.py: Add some documentation of tags, and
	  fix a couple of bugs.

Tue Jul 17 13:25:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/fieldactions.py,secore/searchconnection.py: Add support
	  for tagging - as yet, undocumented, and minimally tested.

Mon Jul 16 11:32:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Check for KeyError when getting a
	  slot number for a range restriction, too.

Mon Jul 16 11:18:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Check for KeyError when accessing
	  list of field actions, and behave as if an empty list was found
	  if the field is unknown.

Fri Jul 13 16:39:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Add an option to query_filter to
	  return only those documents which _don't_ match the filter,
	  instead of those which do.
	* secore/searchconnection_doctest2.txt: Add a test for using a
	  filter with exclude=True.

Mon Jul 09 11:23:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Convert supplied sequence of queries
	  to list, since xapian query constructor isn't happy to take an
	  iterator.

Fri Jul 06 16:38:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Fix bug in replace() causing the