@@ -1,3 +1,14 @@
+Tue Jul 24 10:32:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/fieldactions.py,secore/searchconnection.py,
+	  secore/searchconnection_doctest2.txt: Add the "FACET" action, to
+	  store facets for field search and facet selection.  Still
+	  remaining is to change the serialisation of floats to match
+	  Xapian to make the numeric range calculation work correctly,
+	  translate the resulting numeric ranges into a more suitable
+	  python representation, and handle multiple values for a
+	  particular facet being specified for a single document.
+
 Mon Jul 23 10:59:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/introduction.rst,secore/searchconnection.py: Add special
